# agentic-ssh-mcp

./: LICENSE  README.md  pyproject.toml  ssh_directory.sample.json
.github/workflows/: python-package-conda.yml
src/ssh_session_mcp/: __init__.py  __main__.py  models.py  output.py  server.py  ssh_sessions.py
